--- a/momentum/index.html
+++ b/momentum/index.html
@@ -13,12 +13,23 @@
 <body>
 
     <h2 id="clock">00:00:00</h2>
+    <form class="hidden" id="login-form">
+        <input required maxlength="15" type="text" placeholder="What is your name?" />
+        <input type="submit" value="Log In" />
+    </form>
+    <h1 class="hidden" id="greeting"></h1>
 
 
 
 
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 
 </html>
